--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 	<tr>
 		<td align="center" style="border-bottom:black">Today:</td>
 		<td align="center" style="border-bottom:black">{{1day}}:</td>
-		<td align="center" style="border-bottom:black">{{2days}}:</td>
-		<td align="center" style="border-bottom:black">{{3days}}:</td>
+		<td align="center" style="border-bottom:black">{{2day}}:</td>
+		<td align="center" style="border-bottom:black">{{3day}}:</td>
 	</tr>
 	<tr>
 		<td width="25%" align = "center" style="border-top:black"><img src="sunny.jpg" alt="sunny"></td>
@@ -47,13 +47,13 @@
 		<td width="25%" align = "center" style="border-top:black"><img src="sunny.jpg" alt="sunny"></td>
 	</tr>
 	<tr align="center">
-		<td>{{todayHigh}} F / {{todayLow}} F</td>
+		<td>{{0High}} F / {{0Low}} F</td>
 		<td>{{1High}} F / {{1Low}} F</td>
 		<td>{{2High}} F / {{2Low}} F</td>
 		<td>{{3High}} F / {{3Low}} F</td>
 	</tr>
 	<tr align="center">
-		<td>{todayPrecip}}%</td>
+		<td>{{0Precip}}%</td>
 		<td>{{1Precip}}%</td>
 		<td>{{2Precip}}%</td>
 		<td>{{3Precip}}%</td>
