--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </title>
 <!--<meta http-equiv="refresh" content="60" />-->
 </head>
-<body>
+<body bgcolor="black">
 
 <table border="10" cellspacing="0" width = "100%" style="border: white; color: white; font-size: 25px" bgcolor="black">
 	<tr>
