--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <table border="10" cellspacing="0" width = "100%" style="border: white; color: white; font-size: 25px" bgcolor="black">
 	<tr>
 		<td colspan="4"> 
-			
-			<!--<p id = "date"></p>
-			<script>document.getElementById("date").innerHTML = Date();</script>-->
+			<p id = "date"></p>
+			<script>document.getElementById("date").innerHTML = Date();</script>
 		</td>
 	</tr>
 	<tr>
