--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <table border="10" cellspacing="0" width = "100%" style="border: white; color: white; font-size: 25px" bgcolor="black">
 	<tr>
-		<td colspan="4"> 
+		<td colspan="4" align="center" style="font-size: 35px"> 
 			<p id = "date"></p>
 			<script>document.getElementById("date").innerHTML = Date();</script>
 		</td>
@@ -19,19 +19,19 @@
 	</tr>
 	<tr>
 		<td align="right" style="border-right:black">Windspeed: </td>
-		<td align="center" style="border-left:black">{{windspeed}} mph
+		<td align="left" style="border-left:black"> {{windspeed}} mph
 <!-- embed tag example: problem: can't change font size -->
 			<!--<embed src="info.txt" height="40" width="100">-->
 		</td>
 	</tr>
 	<tr>
 		<td align="right" style="border-right:black">Direction:  </td>
-		<td align="center" style="border-left:black">{{direction}}	
+		<td align="left" style="border-left:black"> {{direction}}	
 		</td>
 	</tr>
 	<tr>
 		<td align="right" style="border-right:black">Humidity:  </td>
-		<td align="center" style="border-left:black">{{humidity}}%</td>
+		<td align="left" style="border-left:black"> {{humidity}}%</td>
 	</tr>
 	<tr>
 		<td align="center" style="border-bottom:black">Today:</td>
