--- a/index.html
+++ b/index.html
@@ -9,20 +9,14 @@
 
 <table border="10" cellspacing="0" width = "100%" style="border: white; color: white; font-size: 25px" bgcolor="black">
 	<tr>
-		<td colspan="4" align="center" style="font-size: 35px"> 
-			<p id = "date"></p>
-			<script>document.getElementById("date").innerHTML = Date();</script>
-		</td>
+		<td colspan="4" align="center" style="font-size: 60px"> {{date}} </td>
 	</tr>
 	<tr>
 		<td colspan="2" width = "50%" rowspan="4" style="font-size: 60px" align="center">{{temperature}} F°</td>
 	</tr>
 	<tr>
 		<td align="right" style="border-right:black">Windspeed: </td>
-		<td align="left" style="border-left:black"> {{windspeed}} mph
-<!-- embed tag example: problem: can't change font size -->
-			<!--<embed src="info.txt" height="40" width="100">-->
-		</td>
+		<td align="left" style="border-left:black"> {{windspeed}} mph</td>
 	</tr>
 	<tr>
 		<td align="right" style="border-right:black">Direction:  </td>
