--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>
 </title>
-<!--<meta http-equiv="refresh" content="60" />-->
+<meta http-equiv="refresh" content="1"
 </head>
 <body bgcolor="black">
 
