--- a/index.html
+++ b/index.html
@@ -9,46 +9,57 @@
 
 <table border="10" cellspacing="0" width = "100%" style="border: white; color: white; font-size: 25px" bgcolor="black">
 	<tr>
-		<td colspan="4" align="center" style="font-size: 60px"> {{date}} </td>
+		<td colspan="4" align="center" style="font-size: 60px"> {{date}}</td>
 	</tr>
+	
 	<tr>
-		<td colspan="2" width = "50%" rowspan="4" style="font-size: 60px" align="center">{{temperature}} F°</td>
-	</tr>
-	<tr>
+		<td colspan="2" align="center">Outside Temperature:</td>
 		<td align="right" style="border-right:black">Windspeed: </td>
 		<td align="left" style="border-left:black"> {{windspeed}} mph</td>
 	</tr>
+	
 	<tr>
+		<td colspan="2" width = "50%" rowspan="2" style="font-size: 60px" align="center">{{temperature}} F°</td>
 		<td align="right" style="border-right:black">Direction:  </td>
 		<td align="left" style="border-left:black"> {{direction}}	
 		</td>
 	</tr>
+	
 	<tr>
 		<td align="right" style="border-right:black">Humidity:  </td>
 		<td align="left" style="border-left:black"> {{humidity}}%</td>
 	</tr>
+	
 	<tr>
 		<td align="center" style="border-bottom:black">Today:</td>
 		<td align="center" style="border-bottom:black">{{1day}}:</td>
 		<td align="center" style="border-bottom:black">{{2day}}:</td>
 		<td align="center" style="border-bottom:black">{{3day}}:</td>
 	</tr>
+	
 	<tr>
 		<td width="25%" align = "center" style="border-top:black"><img src="sunny.jpg" alt="sunny"></td>
 		<td width="25%" align = "center" style="border-top:black"><img src="sunny.jpg" alt="sunny"></td>
 		<td width="25%" align = "center" style="border-top:black"><img src="sunny.jpg" alt="sunny"></td>
 		<td width="25%" align = "center" style="border-top:black"><img src="sunny.jpg" alt="sunny"></td>
 	</tr>
+	
 	<tr align="center">
 		<td>{{0High}} F / {{0Low}} F</td>
 		<td>{{1High}} F / {{1Low}} F</td>
 		<td>{{2High}} F / {{2Low}} F</td>
 		<td>{{3High}} F / {{3Low}} F</td>
 	</tr>
+	
+	<tr>
+		<td colspan="4" align="center">Chance of Rain:</td>
+	</tr>
+	
 	<tr align="center">
 		<td>{{0Precip}}%</td>
 		<td>{{1Precip}}%</td>
 		<td>{{2Precip}}%</td>
 		<td>{{3Precip}}%</td>
+	</tr>
 </body>
 </html>
